Adding chat and video
